...
        android:backgroundTint="@color/colorMainText"
        android:textColorHighlight="@color/colorMainText"

        android:hint="이메일을 입력하세요"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textWebPassword"
        android:padding="20dp"
...
        android:textColorHint="@color/colorMainText"
        android:textColor="@color/colorMainText"
        android:backgroundTint="@color/colorMainText"
        android:hint="비밀번호를 입력하세요"/>

    <Button
        android:id="@+id/login"
        android:text="LOGIN"
        android:layout_below="@id/password"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:background="@color/colorAccent"
...
