...
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/gray"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toStartOf="@+id/send_button"
            android:hint="메시지를 입력하세요"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:textColorHint="#ffffff"
            android:textColorLink="#ffffff" />

...
