<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/room_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="방 제목을 입력하세요."
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>