<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context="com.zimincom.mafiaonline.activity.SignUpActivity">

    <ImageView
        android:id="@+id/text_logo"
        android:src="@drawable/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_below="@id/text_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nickname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:nextFocusDown="@+id/email_input"
                android:textColor="@color/colorMainText"
                android:backgroundTint="@color/colorMainText"
                android:textColorHint="@color/colorMainText"
                android:hint="닉네임을 입력하세요" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@id/password"
                android:textColor="@color/colorMainText"
                android:backgroundTint="@color/colorMainText"
                android:textColorHint="@color/colorMainText"
                android:hint="이메일을 입력하세요" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorMainText"
                android:backgroundTint="@color/colorMainText"
                android:textColorHint="@color/colorMainText"
                android:hint="비밀번호를 입력하세요" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorMainText"
                android:shadowColor="@color/colorMainText"
                android:backgroundTint="@color/colorMainText"
                android:textColorHint="@color/colorMainText"
                android:hint="비밀번호를 확인해주세요" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/signin"
        android:text="가입완료"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
